--- a/src/_locales/hu/messages.json
+++ b/src/_locales/hu/messages.json
@@ -1,6 +1,6 @@
 {
   "appName": {
-    "message": "ChatGPT for Google"
+    "message": "AudioGPT"
   },
   "appDesc": {
     "message": "A ChatGPT válasz megjelenítése a keresőmotor eredményei mellett"
