--- a/src/_locales/es/messages.json
+++ b/src/_locales/es/messages.json
@@ -1,6 +1,6 @@
 {
   "appName": {
-    "message": "ChatGPT for Google"
+    "message": "AudioGPT"
   },
   "appDesc": {
     "message": "Mostrar la respuesta de ChatGPT junto con los resultados de la búsqueda en el motor de búsqueda"
