--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -1,6 +1,6 @@
 {
   "appName": {
-    "message": "ChatGPT for Google"
+    "message": "AudioGPT"
   },
   "appDesc": {
     "message": "Afficher la réponse de ChatGPT à côté des résultats des moteurs de recherche"
