--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -1,6 +1,6 @@
 {
   "appName": {
-    "message": "ChatGPT for Google"
+    "message": "AudioGPT"
   },
   "appDesc": {
     "message": "Отображение ответа ChatGPT вместе с результатами поиска"
