--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -1,6 +1,6 @@
 {
   "appName": {
-    "message": "ChatGPT for Google"
+    "message": "AudioGPT"
   },
   "appDesc": {
     "message": "在搜索引擎结果中同时显示ChatGPT的回答"
